[ARM] PR target/67929 Tighten vfp3_const_double_for_bits checks

PR target/67929
	* config/arm/arm.c (vfp3_const_double_for_bits): Rewrite.
	* config/arm/constraints.md (Dp): Update callsite.
	* config/arm/predicates.md (const_double_vcvt_power_of_two): Likewise.

	* gcc.target/arm/pr67929_1.c: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@229436 138bc75d-0d04-0410-961f-82ee72b054a4